--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Juego de Serpientes</title>
   <meta name="description" content="The HTML5 Herald">
+  <script src="js/hammer.min.js" type="text/javascript"></script>
   <script src="js/jquery.min.js" type="text/javascript"></script> 
 
   <style>
